versioned_docs/version-2.4/reference/subsystems/isort.mdx
---
title: isort
description: |
  The Python import sorter tool (https://timothycrosley.github.io/isort/).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Python import sorter tool (https://timothycrosley.github.io/isort/).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[isort]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]isort-skip`}
  env_repr='PANTS_ISORT_SKIP'
  toml_repr={`[isort]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use isort when running `/home/josh/work/scie-pants/dist/pants fmt` and `/home/josh/work/scie-pants/dist/pants lint`.

</Option>

### `args`

<Option
  cli_repr={`--isort-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_ISORT_ARGS'
  toml_repr={`[isort]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to isort, e.g. `--isort-args="--case-sensitive --trailing-comma"`.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--isort-version=<str>`}
  env_repr='PANTS_ISORT_VERSION'
  toml_repr={`[isort]
version = <str>`}
  default_repr={`isort[pyproject]>=5.5.1,<5.6`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--isort-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_ISORT_EXTRA_REQUIREMENTS'
  toml_repr={`[isort]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "setuptools"\n]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--isort-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_ISORT_INTERPRETER_CONSTRAINTS'
  toml_repr={`[isort]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.6"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `console_script`

<Option
  cli_repr={`--isort-console-script=<str>`}
  env_repr='PANTS_ISORT_CONSOLE_SCRIPT'
  toml_repr={`[isort]
console_script = <str>`}
  default_repr={`isort`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--isort-entry-point=<str>`}
  env_repr='PANTS_ISORT_ENTRY_POINT'
  toml_repr={`[isort]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `config`

<Option
  cli_repr={`--isort-config="[<file_option>, <file_option>, ...]"`}
  env_repr='PANTS_ISORT_CONFIG'
  toml_repr={`[isort]
config = [
    <file_option>,
    <file_option>,
    ...,
]`}
  default_repr={`[]`}
>

Path to `isort.cfg` or alternative isort config file(s).

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
